# ros_control_boilerplate

./: CMakeLists.txt  package.xml  ros_control_boilerplate.rosinstall
config/: diff_drive.yaml  robot_in_a_box.yaml
frcrobot_control/: CMakeLists.txt  package.xml
frcrobot_control/config/: robot_in_a_box.yaml  swervebot_controllers.yaml
frcrobot_control/include/frcrobot_control/: frcrobot_hw_interface.h  frcrobot_sim_interface.h
frcrobot_control/launch/: frcrobot_hardware.launch  frcrobot_visualize.launch  robot_in_a_box.launch  sim_in_a_box.launch
frcrobot_control/src/: frcrobot_hw_interface.cpp  frcrobot_sim_interface.cpp  frcrobot_sim_main.cpp
include/ros_control_boilerplate/: frc_robot_interface.h  frcrobot_hw_interface.h  generic_hw_control_loop.h  generic_hw_interface.h
launch/: robot_in_a_box.launch  sim_in_a_box.launch
src/: frc_robot_interface.cpp  frcrobot_hw_interface.cpp  frcrobot_hw_main.cpp  frcrobot_sim_interface.cpp  frcrobot_sim_main.cpp  generic_hw_control_loop.cpp  generic_hw_interface.cpp  sim_hw_interface.cpp
src/tools/: keyboard_teleop.cpp
